--- a/templates/commits.html
+++ b/templates/commits.html
@@ -15,10 +15,10 @@
         .then(response => response.json())
         .then(data => {
           // Création d'un tableau pour stocker les données des commits
-          var commitsData = [['Date']];
+          var commitsData = [['Date', 'Index']];
           // Ajout de chaque date de commit au tableau de données
-          data.forEach(commit => {
-            commitsData.push([commit.commit.author.date]);
+          data.forEach((commit, index) => {
+            commitsData.push([commit.commit.author.date, index + 1]);
           });
 
           // Création d'un objet DataTable avec les données des commits
@@ -27,12 +27,11 @@
           // Options du graphique
           var options = {
             title: 'Dates des commits sur GitHub',
-            curveType: 'function',
-            legend: { position: 'bottom' }
+            legend: { position: 'none' }
           };
 
-          // Création du graphique de type linechart dans l'élément avec l'ID 'chart_div'
-          var chart = new google.visualization.LineChart(document.getElementById('chart_div'));
+          // Création du graphique de type scatter chart dans l'élément avec l'ID 'chart_div'
+          var chart = new google.visualization.ScatterChart(document.getElementById('chart_div'));
           chart.draw(dataTable, options);
         })
         .catch(error => console.error('Erreur lors de la récupération des données des commits :', error));
